basic function for quick

--- a/test.html
+++ b/test.html
@@ -12,6 +12,9 @@
     <script type="text/javascript" src="/Users/TommyYE/jqwidgets/jqwidgets/jqxcombobox.js"></script>
 </head>
 <body>
+    <div id='logo'>
+        <img src="/Users/TommyYE/Desktop/IE/photos/QuitMate.png" alt = "logo" style="width:302px;hight:403px;">
+    </div>
     <div id='content'>
         <p>Please select the number of cigarette you smoke today:</P>
         <script type="text/javascript">
@@ -33,6 +36,10 @@
         </script>
         <div id='jqxcombobox'>
         </div>
+    </div>
+    <div id='detail'>
+        <a href="http://www.quitnow.gov.au/internet/quitnow/publishing.nsf/Content/damaging-your-body">The danger about smoking</a>
+        <a href="">How to quit</a>
     </div>
 </body>
 </html>
