finish the link

--- a/test.html
+++ b/test.html
@@ -39,7 +39,7 @@
     </div>
     <div id='detail'>
         <a href="http://www.quitnow.gov.au/internet/quitnow/publishing.nsf/Content/damaging-your-body">The danger about smoking</a>
-        <a href="">How to quit</a>
+        <a href="http://www.qld.gov.au/health/staying-healthy/atods/smoking/quitline/index.html">How to quit</a>
     </div>
 </body>
 </html>
