change selection to sequence

--- a/test.html
+++ b/test.html
@@ -19,9 +19,9 @@
         <p>Please select the number of cigarette you smoke today:</P>
         <script type="text/javascript">
             $(document).ready(function () {
-                var source = [
-                    "0","1","2","3","4","5","6","7","8","9"
-                ];
+                var source = [];
+                for (var i = 0; i != 251; ++i) source.push(i)
+
                 // Create a jqxComboBox
                 $("#jqxcombobox").jqxComboBox({ source: source, selectedIndex: 0, width: '200px', height: '25px' });
                 // disable the sixth item.
